# agentic-search

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.rustfs.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: bench.yml  ci.yml  release.yml  security.yml
bench/: Cargo.toml
bench/benches/: rrf.rs
bench/global/: codesearchnet.py
bench/macro/: run.py
bench/mdoc/: gen.py
bench/results/: criterion.txt
bench/src/: lib.rs
crates/as-ast/: Cargo.toml
crates/as-ast/src/: lib.rs
crates/as-bindings-node/: Cargo.toml
crates/as-bindings-node/src/: lib.rs
crates/as-bindings-py/: Cargo.toml
crates/as-bindings-py/src/: lib.rs
crates/as-cache/: Cargo.toml
crates/as-cache/src/: lib.rs
crates/as-cli/: Cargo.toml
crates/as-cli/src/: main.rs
crates/as-core/: Cargo.toml
crates/as-core/src/: lib.rs
crates/as-embed/: Cargo.toml
crates/as-embed/src/: lib.rs
crates/as-fs/: Cargo.toml
crates/as-fs/src/: lib.rs
crates/as-fs/tests/: glob.rs
crates/as-grep/: Cargo.toml
crates/as-grep/src/: grep.rs  lib.rs  parallel.rs  span.rs
crates/as-index/: Cargo.toml
crates/as-index/src/: lib.rs
crates/as-lex/: Cargo.toml
crates/as-lex/src/: grep.rs  lib.rs  tantivy_index.rs
crates/as-plan/: Cargo.toml
crates/as-plan/src/: lib.rs  terms.rs
crates/as-rerank/: Cargo.toml
crates/as-rerank/src/: lib.rs
crates/as-server/: Cargo.toml
crates/as-server/src/: handlers.rs  lib.rs  mcp_stdio.rs  state.rs
crates/as-server/tests/: mcp_schema.rs  mcp_transcript.rs
crates/as-store/: Cargo.toml
crates/as-store/src/: lib.rs  local_mmap.rs  manifest.rs  object_store_impl.rs
crates/as-store/tests/: local_store.rs  rustfs_s3.rs
crates/as-vec/: Cargo.toml
crates/as-vec/src/: build.rs  embed.rs  index.rs  kmeans.rs  lib.rs  manifest.rs  query.rs
crates/as-vec/tests/: end_to_end.rs
crates/as-web/: Cargo.toml
crates/as-web/src/: brave.rs  lib.rs  tavily.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  PLAN.md  PUBLISHING.md  RESEARCH.md  fast-accurate-agentic-search-plan.md
examples/: README.md  claude_agent_corpus.py  claude_agent_sdk_example.py  deepagents_corpus.py  native_python_corpus.py  node_corpus.ts
examples/corpus/: build.sh
examples/go_corpus/: go.mod  main.go
examples/native_rust/: Cargo.toml  main.rs
examples/transcripts/: big_run_2026-05-18.md  claude_agent_sdk_run.md  deepagents_run.md  node_and_go_run.md
integration_tests/: test_claude_agent_sdk.py  test_deepagents.py
mcp/: README.md
scripts/: rustfs-up.sh
sdks/go/agenticsearch/: README.md  client.go  client_test.go  go.mod
sdks/node/agentic-search/: README.md  package.json
sdks/node/agentic-search/src/: index.ts
sdks/python/agentic_search/: README.md  pyproject.toml
sdks/python/agentic_search/agentic_search/: __init__.py
sdks/python/claude_agent_search/: README.md  pyproject.toml
sdks/python/claude_agent_search/src/claude_agent_search/: __init__.py
sdks/python/crewai_agentic_search/: pyproject.toml
sdks/python/crewai_agentic_search/crewai_agentic_search/: __init__.py
sdks/python/deepagents_search/: pyproject.toml
sdks/python/deepagents_search/deepagents_search/: __init__.py
sdks/python/langchain_agentic_search/: pyproject.toml
sdks/python/langchain_agentic_search/langchain_agentic_search/: __init__.py
sdks/python/openai_agentic_search/: README.md  pyproject.toml
sdks/python/openai_agentic_search/openai_agentic_search/: __init__.py
