[workspace]
resolver = "2"
members = [
    "crates/as-core",
    "crates/as-store",
    "crates/as-fs",
    "crates/as-grep",
    "crates/as-ast",
    "crates/as-cache",
    "crates/as-embed",
    "crates/as-vec",
    "crates/as-plan",
    "crates/as-server",
    "crates/as-cli",
    "bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/CREVIOS/agentic-search"
homepage = "https://github.com/CREVIOS/agentic-search"
authors = ["agentic-search contributors"]

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
object_store = { version = "0.13", features = ["aws", "gcp"] }

# Lexical
grep-searcher = "0.1"
grep-regex = "0.1"

# Vector — fastembed wraps ort/ONNX runtime for embeddings
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub"] }

# HTTP / server
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Bench
criterion = { version = "0.5", features = ["html_reports"] }

# Internal — published on crates.io as `agentic-search-*` (the short
# `as-*` names were taken). Each entry uses `package = "agentic-
# search-X"` so the crates.io name and the workspace alias differ.
# `[lib] name = "as_X"` inside each crate keeps the in-tree Rust
# imports (`use as_core::*`) working without churn. `version` is
# required alongside `path` so `cargo publish` can rewrite path deps
# into crates.io-style version requirements.
as-core = { package = "agentic-search-core", path = "crates/as-core", version = "0.1.0" }
as-store = { package = "agentic-search-store", path = "crates/as-store", version = "0.1.0" }
as-fs = { package = "agentic-search-fs", path = "crates/as-fs", version = "0.1.0" }
as-grep = { package = "agentic-search-grep", path = "crates/as-grep", version = "0.1.0" }
as-ast = { package = "agentic-search-ast", path = "crates/as-ast", version = "0.1.0" }
as-cache = { package = "agentic-search-cache", path = "crates/as-cache", version = "0.1.0" }
as-embed = { package = "agentic-search-embed", path = "crates/as-embed", version = "0.1.0" }
as-vec = { package = "agentic-search-vec", path = "crates/as-vec", version = "0.1.0" }
as-plan = { package = "agentic-search-plan", path = "crates/as-plan", version = "0.1.0" }
as-server = { package = "agentic-search-server", path = "crates/as-server", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
