[package]
name = "as-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter span extractor: widen a grep hit to its enclosing function/class/method"

[dependencies]
as-core = { workspace = true }
as-grep = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12"
lru = "0.16"
sha2 = "0.10"
hex = "0.4"

tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"

[dev-dependencies]
