[package]
name = "as-bindings-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Node bindings (napi-rs) for agentic-search"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi9", "async"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
