[package]
name = "as-bindings-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings (pyo3) for agentic-search"
publish = false

[lib]
name = "agentic_search"
crate-type = ["cdylib", "rlib"]

[dependencies]
as-core = { workspace = true }
as-plan = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
serde_json = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.22"
