[package]
name = "as-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Turbopuffer-style tier cache (memory → NVMe → object store) for agentic-search"

[dependencies]
as-core = { workspace = true }
as-store = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
parking_lot = "0.12"
lru = "0.16"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
filetime = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
