[package]
name = "agentic-search-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "agentic-search CLI"

[[bin]]
name = "agentic-search"
path = "src/main.rs"

[dependencies]
as-core = { workspace = true }
as-store = { workspace = true }
as-fs = { workspace = true }
as-grep = { workspace = true }
as-ast = { workspace = true }
as-cache = { workspace = true }
as-plan = { workspace = true }
as-vec = { workspace = true }
as-embed = { workspace = true }
as-server = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
