[package]
name = "as-plan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Query planner: hybrid fusion (RRF) of lexical + vector + web, plus rerank"

[dependencies]
as-core = { workspace = true }
as-lex = { workspace = true }
as-vec = { workspace = true }
as-web = { workspace = true }
as-rerank = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
