[package]
name = "as-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Object-store abstraction for agentic-search (S3/GCS/R2/local) with NVMe cache"

[dependencies]
as-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
