[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-search"
version = "0.1.0"
description = "Native Python REST client for agentic-search — no MCP, no framework dependency"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "agentic-search contributors" }]
keywords = ["search", "rag", "s3", "ripgrep", "tree-sitter", "vector", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/CREVIOS/agentic-search"
Repository = "https://github.com/CREVIOS/agentic-search"
Issues = "https://github.com/CREVIOS/agentic-search/issues"
Changelog = "https://github.com/CREVIOS/agentic-search/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_search*"]
