[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "claude-agent-search"
version = "0.0.1"
description = "Claude Agent SDK adapter for agentic-search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "agentic-search contributors" }]
dependencies = [
    "agentic-search>=0.0.1",
    "claude-agent-sdk>=0.1.0",
]

[tool.maturin]
python-source = "src"
module-name = "claude_agent_search._native"
