[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-agent-search"
version = "0.0.1"
description = "Claude Agent SDK adapter for agentic-search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "agentic-search contributors" }]
dependencies = [
    # Pure-python adapter: spawns the agentic-search binary over MCP stdio.
    "claude-agent-sdk>=0.1.81",
]

[tool.setuptools.packages.find]
where = ["src"]
