[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-agentic-search"
version = "0.0.1"
description = "OpenAI Agents SDK adapter for agentic-search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "agentic-search contributors" }]
dependencies = [
    "openai-agents>=0.17.0",
    "requests>=2.31",
]
